# SKATE

./: README.md  skate.cpp  skate_test.cpp
SkateGameGUI/: CMakeLists.txt  skate_gui_standalone_qt6.cpp
